hotfix/stop avatar stretch

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,6 +3,7 @@
     height: 120px;
     border-radius: 50%;
     margin: 0;
+    object-fit: cover;
 }
 
 .profile__avatar:hover {
